--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kastro App</title>
+    <title>GreatCoder App</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -296,7 +296,7 @@
 
     <div class="exam-container">
         <div class="exam-header">
-            <div class="exam-title">DevOps Professional Certification Exam</div>
+            <div class="exam-title">DevOps Professional Certification Exam by GreatCoder's</div>
             <div class="exam-subtitle">Validate your DevOps knowledge and skills</div>
             
             <div class="timer-container" id="timer-container">
