--- a/frontend/result.html
+++ b/frontend/result.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-    <title>Kastro App</title>
+    <title>GreatCoder App</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -198,7 +198,7 @@
         </div>
 
         <div class="result-message">
-            <p>Thank you for completing the DevOps Mock Certification Exam.</p>
+            <p>Thank you for completing the DevOps Mock Certification Exam with GreatCoder's.</p>
         </div>
 
         <button class="next-btn" onclick="showScore(); return false;">
@@ -243,13 +243,13 @@
         </div>
        
         <div class="result-footer">
-            <p>For detailed answers or questions, please contact the exam administrator.</p>
+            <p>For detailed answers or questions, please contact the GreatCoder technologies LLP.</p>
             <p><a href="/" style="color: var(--primary);"><i class="fas fa-home"></i> Return to Home</a></p>
         </div>
     </div>
 
     <div class="developer-credit">
-        Developed by <a href="#" target="_blank">KASTRO</a>
+        Developed by <a href="#" target="_blank">GreatCoder</a>
     </div>
 
     <script>
