--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <h2>Admin Dashboard</h2>
-        <img src="{{ url_for('static', filename='admin-banner.jpg') }}" class="banner" alt="Admin Banner">
+        <img src="images/logo.png" class="banner" alt="Admin Banner" width="120px" height="auto">
         <p>All User Submissions</p>
 
         <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; margin-top: 20px; text-align: left;">
