--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -41,11 +41,26 @@
             border-bottom: 1px solid #e5e7eb;
         }
 
+        .logo {
+            width: 120px;
+            height: auto;
+            margin-bottom: 1rem;
+            animation: fadeIn 1s ease-out;
+        }
+
         .exam-title {
             font-size: 1.8rem;
             font-weight: 700;
             color: var(--primary);
             margin-bottom: 0.5rem;
+        }
+
+        .great {
+            color: black;
+        }
+
+        .coder {
+            color: red;
         }
 
         .exam-subtitle {
@@ -199,7 +214,7 @@
             display: block;
             width: 100%;
             padding: 1rem;
-            background: var(--primary);
+            background: green;
             color: white;
             border: none;
             border-radius: 8px;
@@ -212,9 +227,9 @@
         }
 
         .submit-btn:hover {
-            background: var(--primary-dark);
+            background: green;
             transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(79, 70, 229, 0.3);
+            box-shadow: 0 4px 8px rgb(5, 157, 69);
         }
 
         .submit-btn i {
@@ -296,7 +311,8 @@
 
     <div class="exam-container">
         <div class="exam-header">
-            <div class="exam-title">DevOps Professional Certification Exam by GreatCoder's</div>
+            <img src="images/logo.png" alt="GreatCoder Logo" class="logo">
+            <div class="exam-title">DevOps Professional Certification Exam by <span class="great">Great</span><span class="coder">Code</span><span class="great">r</span></div>
             <div class="exam-subtitle">Validate your DevOps knowledge and skills</div>
             
             <div class="timer-container" id="timer-container">
