--- a/frontend/result.html
+++ b/frontend/result.html
@@ -208,7 +208,7 @@
 </head>
 <body>
     <div class="result-container">
-        <img src="images/logo.png" alt="GreatCoder Logo" class="logo">
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="GreatCoder Logo" class="logo">
         <div class="result-header">
             <h1 class="result-title">Your Result</h1>
         </div>
