--- a/frontend/index.html
+++ b/frontend/index.html
@@ -363,7 +363,7 @@
         <div class="header">
             <div class="exam-badge">
                 <i class="logo">
-                    <img src="images/g-logo.png" alt="G Logo" class="logo-img">
+                    <img src="{{ url_for('static', filename='g-logo.png') }}" alt="G Logo" class="logo-img">
                 </i> <span class="great">great</span><span class="coder">code</span><span class="great">r</span> Mock Exam
             </div>
             <h1>DevOps Mock Certification Exam</h1>
