--- a/frontend/exam.html
+++ b/frontend/exam.html
@@ -311,7 +311,7 @@
 
     <div class="exam-container">
         <div class="exam-header">
-            <img src="images/logo.png" alt="GreatCoder Logo" class="logo">
+            <img src="{{ url_for('static', filename='logo.png') }}" alt="GreatCoder Logo" class="logo">
             <div class="exam-title">DevOps Professional Certification Exam by <span class="great">Great</span><span class="coder">Code</span><span class="great">r</span></div>
             <div class="exam-subtitle">Validate your DevOps knowledge and skills</div>
             
